--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ngrx/store": "^8.0.1",
     "hammerjs": "^2.0.8",
     "i": "^0.3.6",
     "rxjs": "~6.4.0",
