--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 # dependencies
 /node_modules
 
+# compodoc
+/documentation
+
 # profiling files
 chrome-profiler-events.json
 speed-measure-plugin.json
