Setting to simplify the "sonar-scanner" command

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,9 +10,17 @@ sonar.projectName=EventsUI
 sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Defaults to .
-#sonar.sources=.
+sonar.sources=src
  
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
 
-sonar.exclusions=documentation/**
+sonar.exclusions=documentation/**, *main.ts, **test.ts, **constants.ts, **.model.ts, **.module.ts, **/environments/**
+
+sonar.host.url=http://localhost:9000
+sonar.login=admin
+sonar.password=admin
+sonar.tests=src
+sonar.language=ts
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/events-ui/lcov.info
